...
              <View
                style={[
                  styles.cards,
                  styles.backItem,
                  {backgroundColor: brandTheme.colors.primary},
                ]}
                testID="clue-back"
              >
                {backItem}
              </View>
            </CardFlip>
          </View>
        )}
...
