...
import translations from '../translations';
import {RESOURCE_TYPE} from '../const';
import Resource from './resource';
import Html from './html';
import QuestionChoices from './question-choices';
import type {Props as QuestionChoicesProps} from './question-choices';
import QuestionTitle from './question-title';
import PlaceholderLine from './placeholder-line';
import Space from './space';
import Button from './button';

export interface Props {
  type?: QuestionType;
...
      </View>
      <Space type="base" />
      <View style={styles.footer}>
        <Button
          onPress={onButtonPress}
          isDisabled={isValidationDisabled}
          testID="button-validate"
          analyticsID="button-validate"
          analyticsParams={{questionType: type}}
        >
          {translations.validate}
        </Button>
      </View>
...
