...
      userChoices = [],
      isValidationDisabled,
      isValidating,
    } = this.props;

    return (
      <Screen testID="question-screen" onRef={this.handleRef}>
        <StatusBar barStyle="dark-content" backgroundColor={HEADER_BACKGROUND_COLOR} />
        <Question
          type={type}
          choices={choices}
          header={header}
          explanation={explanation}
...
